versions/0.25.3/_sources/refs/_aws-cdk_aws-elasticsearch.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"SBcNqvVfisgP87prFZfJjM+E1IZgcmW0fu7hefCvSwM="}

@aws-cdk/aws-elasticsearch
==========================

.. mdinclude:: ./__aws-cdk_aws-elasticsearch.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.Elasticsearch/0.25.3>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.Elasticsearch" Version="0.25.3" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.Elasticsearch --version 0.25.3

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.Elasticsearch" version="0.25.3" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/elasticsearch/0.25.3/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:elasticsearch:jar:0.25.3'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="elasticsearch" rev="0.25.3"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>elasticsearch</artifactId>
           <version>0.25.3</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:elasticsearch:0.25.3'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='elasticsearch', version='0.25.3')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticsearch/v/0.25.3>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticsearch@0.25.3

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticsearch": "^0.25.3"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticsearch@0.25.3


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticsearch/v/0.25.3>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticsearch@0.25.3

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticsearch": "^0.25.3"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticsearch@0.25.3



.. py:module:: @aws-cdk/aws-elasticsearch

CfnDomain
^^^^^^^^^

.. py:class:: CfnDomain(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Elasticsearch;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticsearch.CfnDomain;

      .. code-tab:: javascript

         const { CfnDomain } = require('@aws-cdk/aws-elasticsearch');

      .. code-tab:: typescript

         import { CfnDomain } from '@aws-cdk/aws-elasticsearch';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomainProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: domainArn

      :type: string *(readonly)*


   .. py:attribute:: domainEndpoint

      :type: string *(readonly)*


   .. py:attribute:: domainName

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomainProps`\  *(readonly)*


   .. py:attribute:: tags

      The ``TagManager`` handles setting, removing and formatting tags

      

      Tags should be managed either passing them as properties during

      initiation or by calling methods on this object. If both techniques are

      used only the tags from the TagManager will be used. ``Tag`` (aspect)

      will use the manager.



      :type: :py:class:`@aws-cdk/cdk.TagManager`\  *(readonly)*

   .. py:class:: EBSOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.EBSOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.EBSOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.EBSOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: ebsEnabled

         ``CfnDomain.EBSOptionsProperty.EBSEnabled``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-ebsoptions.html#cfn-elasticsearch-domain-ebsoptions-ebsenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: iops

         ``CfnDomain.EBSOptionsProperty.Iops``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-ebsoptions.html#cfn-elasticsearch-domain-ebsoptions-iops


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: volumeSize

         ``CfnDomain.EBSOptionsProperty.VolumeSize``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-ebsoptions.html#cfn-elasticsearch-domain-ebsoptions-volumesize


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: volumeType

         ``CfnDomain.EBSOptionsProperty.VolumeType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-ebsoptions.html#cfn-elasticsearch-domain-ebsoptions-volumetype


         :type: string *(optional)*


   .. py:class:: ElasticsearchClusterConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.ElasticsearchClusterConfigProperty;

         .. code-tab:: javascript

            // CfnDomain.ElasticsearchClusterConfigProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.ElasticsearchClusterConfigProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: dedicatedMasterCount

         ``CfnDomain.ElasticsearchClusterConfigProperty.DedicatedMasterCount``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-elasticsearchclusterconfig.html#cfn-elasticsearch-domain-elasticseachclusterconfig-dedicatedmastercount


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: dedicatedMasterEnabled

         ``CfnDomain.ElasticsearchClusterConfigProperty.DedicatedMasterEnabled``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-elasticsearchclusterconfig.html#cfn-elasticsearch-domain-elasticseachclusterconfig-dedicatedmasterenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: dedicatedMasterType

         ``CfnDomain.ElasticsearchClusterConfigProperty.DedicatedMasterType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-elasticsearchclusterconfig.html#cfn-elasticsearch-domain-elasticseachclusterconfig-dedicatedmastertype


         :type: string *(optional)*


      .. py:attribute:: instanceCount

         ``CfnDomain.ElasticsearchClusterConfigProperty.InstanceCount``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-elasticsearchclusterconfig.html#cfn-elasticsearch-domain-elasticseachclusterconfig-instancecount


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: instanceType

         ``CfnDomain.ElasticsearchClusterConfigProperty.InstanceType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-elasticsearchclusterconfig.html#cfn-elasticsearch-domain-elasticseachclusterconfig-instnacetype


         :type: string *(optional)*


      .. py:attribute:: zoneAwarenessEnabled

         ``CfnDomain.ElasticsearchClusterConfigProperty.ZoneAwarenessEnabled``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-elasticsearchclusterconfig.html#cfn-elasticsearch-domain-elasticseachclusterconfig-zoneawarenessenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:class:: EncryptionAtRestOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.EncryptionAtRestOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.EncryptionAtRestOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.EncryptionAtRestOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: enabled

         ``CfnDomain.EncryptionAtRestOptionsProperty.Enabled``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-encryptionatrestoptions.html#cfn-elasticsearch-domain-encryptionatrestoptions-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: kmsKeyId

         ``CfnDomain.EncryptionAtRestOptionsProperty.KmsKeyId``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-encryptionatrestoptions.html#cfn-elasticsearch-domain-encryptionatrestoptions-kmskeyid


         :type: string *(optional)*


   .. py:class:: NodeToNodeEncryptionOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.NodeToNodeEncryptionOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.NodeToNodeEncryptionOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.NodeToNodeEncryptionOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: enabled

         ``CfnDomain.NodeToNodeEncryptionOptionsProperty.Enabled``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-nodetonodeencryptionoptions.html#cfn-elasticsearch-domain-nodetonodeencryptionoptions-enabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:class:: SnapshotOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.SnapshotOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.SnapshotOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.SnapshotOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: automatedSnapshotStartHour

         ``CfnDomain.SnapshotOptionsProperty.AutomatedSnapshotStartHour``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-snapshotoptions.html#cfn-elasticsearch-domain-snapshotoptions-automatedsnapshotstarthour


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:class:: VPCOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.VPCOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.VPCOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.VPCOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: securityGroupIds

         ``CfnDomain.VPCOptionsProperty.SecurityGroupIds``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-vpcoptions.html#cfn-elasticsearch-domain-vpcoptions-securitygroupids


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*


      .. py:attribute:: subnetIds

         ``CfnDomain.VPCOptionsProperty.SubnetIds``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticsearch-domain-vpcoptions.html#cfn-elasticsearch-domain-vpcoptions-subnetids


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


CfnDomainProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnDomainProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Elasticsearch;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticsearch.CfnDomainProps;

      .. code-tab:: javascript

         // CfnDomainProps is an interface

      .. code-tab:: typescript

         import { CfnDomainProps } from '@aws-cdk/aws-elasticsearch';





   .. py:attribute:: accessPolicies

      ``AWS::Elasticsearch::Domain.AccessPolicies``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-accesspolicies


      :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:attribute:: advancedOptions

      ``AWS::Elasticsearch::Domain.AdvancedOptions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-advancedoptions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or string => (string or :py:class:`@aws-cdk/cdk.Token`\ ) *(optional)*


   .. py:attribute:: domainName

      ``AWS::Elasticsearch::Domain.DomainName``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-domainname


      :type: string *(optional)*


   .. py:attribute:: ebsOptions

      ``AWS::Elasticsearch::Domain.EBSOptions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-ebsoptions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.EBSOptionsProperty`\  *(optional)*


   .. py:attribute:: elasticsearchClusterConfig

      ``AWS::Elasticsearch::Domain.ElasticsearchClusterConfig``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-elasticsearchclusterconfig


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.ElasticsearchClusterConfigProperty`\  *(optional)*


   .. py:attribute:: elasticsearchVersion

      ``AWS::Elasticsearch::Domain.ElasticsearchVersion``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-elasticsearchversion


      :type: string *(optional)*


   .. py:attribute:: encryptionAtRestOptions

      ``AWS::Elasticsearch::Domain.EncryptionAtRestOptions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-encryptionatrestoptions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.EncryptionAtRestOptionsProperty`\  *(optional)*


   .. py:attribute:: nodeToNodeEncryptionOptions

      ``AWS::Elasticsearch::Domain.NodeToNodeEncryptionOptions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-nodetonodeencryptionoptions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.NodeToNodeEncryptionOptionsProperty`\  *(optional)*


   .. py:attribute:: snapshotOptions

      ``AWS::Elasticsearch::Domain.SnapshotOptions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-snapshotoptions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.SnapshotOptionsProperty`\  *(optional)*


   .. py:attribute:: tags

      ``AWS::Elasticsearch::Domain.Tags``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-tags


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.CfnTag`\ )[] *(optional)*


   .. py:attribute:: vpcOptions

      ``AWS::Elasticsearch::Domain.VPCOptions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticsearch-domain.html#cfn-elasticsearch-domain-vpcoptions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.VPCOptionsProperty`\  *(optional)*


