versions/0.27.0/_sources/refs/_aws-cdk_aws-elasticsearch.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"g93vuwG95S1LAGim6QseQDLecNGlCzCv5kX0XOcmaA0="}

@aws-cdk/aws-elasticsearch
==========================

.. mdinclude:: ./__aws-cdk_aws-elasticsearch.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.Elasticsearch/0.27.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.Elasticsearch" Version="0.27.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.Elasticsearch --version 0.27.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.Elasticsearch" version="0.27.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/elasticsearch/0.27.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:elasticsearch:jar:0.27.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="elasticsearch" rev="0.27.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>elasticsearch</artifactId>
           <version>0.27.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:elasticsearch:0.27.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='elasticsearch', version='0.27.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticsearch/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticsearch@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticsearch": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticsearch@0.27.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticsearch/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticsearch@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticsearch": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticsearch@0.27.0



.. py:module:: @aws-cdk/aws-elasticsearch

CfnDomain
^^^^^^^^^

.. py:class:: CfnDomain(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Elasticsearch;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticsearch.CfnDomain;

      .. code-tab:: javascript

         const { CfnDomain } = require('@aws-cdk/aws-elasticsearch');

      .. code-tab:: typescript

         import { CfnDomain } from '@aws-cdk/aws-elasticsearch';



   A CloudFormation `AWS::Elasticsearch::Domain`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomainProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: domainArn

      :type: string *(readonly)*


   .. py:attribute:: domainEndpoint

      :type: string *(readonly)*


   .. py:attribute:: domainName

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomainProps`\  *(readonly)*


   .. py:attribute:: tags

      The `TagManager` handles setting, removing and formatting tags

      

      Tags should be managed either passing them as properties during

      initiation or by calling methods on this object. If both techniques are

      used only the tags from the TagManager will be used. `Tag` (aspect)

      will use the manager.



      :type: :py:class:`@aws-cdk/cdk.TagManager`\  *(readonly)*

   .. py:class:: EBSOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.EBSOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.EBSOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.EBSOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: ebsEnabled

         `CfnDomain.EBSOptionsProperty.EBSEnabled`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: iops

         `CfnDomain.EBSOptionsProperty.Iops`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: volumeSize

         `CfnDomain.EBSOptionsProperty.VolumeSize`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: volumeType

         `CfnDomain.EBSOptionsProperty.VolumeType`



         :type: string *(optional)* *(readonly)*


   .. py:class:: ElasticsearchClusterConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.ElasticsearchClusterConfigProperty;

         .. code-tab:: javascript

            // CfnDomain.ElasticsearchClusterConfigProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.ElasticsearchClusterConfigProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: dedicatedMasterCount

         `CfnDomain.ElasticsearchClusterConfigProperty.DedicatedMasterCount`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: dedicatedMasterEnabled

         `CfnDomain.ElasticsearchClusterConfigProperty.DedicatedMasterEnabled`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: dedicatedMasterType

         `CfnDomain.ElasticsearchClusterConfigProperty.DedicatedMasterType`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: instanceCount

         `CfnDomain.ElasticsearchClusterConfigProperty.InstanceCount`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: instanceType

         `CfnDomain.ElasticsearchClusterConfigProperty.InstanceType`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: zoneAwarenessEnabled

         `CfnDomain.ElasticsearchClusterConfigProperty.ZoneAwarenessEnabled`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:class:: EncryptionAtRestOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.EncryptionAtRestOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.EncryptionAtRestOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.EncryptionAtRestOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: enabled

         `CfnDomain.EncryptionAtRestOptionsProperty.Enabled`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: kmsKeyId

         `CfnDomain.EncryptionAtRestOptionsProperty.KmsKeyId`



         :type: string *(optional)* *(readonly)*


   .. py:class:: NodeToNodeEncryptionOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.NodeToNodeEncryptionOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.NodeToNodeEncryptionOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.NodeToNodeEncryptionOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: enabled

         `CfnDomain.NodeToNodeEncryptionOptionsProperty.Enabled`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:class:: SnapshotOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.SnapshotOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.SnapshotOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.SnapshotOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: automatedSnapshotStartHour

         `CfnDomain.SnapshotOptionsProperty.AutomatedSnapshotStartHour`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:class:: VPCOptionsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Elasticsearch;

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticsearch.CfnDomain.VPCOptionsProperty;

         .. code-tab:: javascript

            // CfnDomain.VPCOptionsProperty is an interface

         .. code-tab:: typescript

            import { CfnDomain.VPCOptionsProperty } from '@aws-cdk/aws-elasticsearch';





      .. py:attribute:: securityGroupIds

         `CfnDomain.VPCOptionsProperty.SecurityGroupIds`



         :type: string[] *(optional)* *(readonly)*


      .. py:attribute:: subnetIds

         `CfnDomain.VPCOptionsProperty.SubnetIds`



         :type: string[] *(optional)* *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnDomainProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnDomainProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Elasticsearch;

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticsearch.CfnDomainProps;

      .. code-tab:: javascript

         // CfnDomainProps is an interface

      .. code-tab:: typescript

         import { CfnDomainProps } from '@aws-cdk/aws-elasticsearch';



   Properties for defining a `AWS::Elasticsearch::Domain`





   .. py:attribute:: accessPolicies

      `AWS::Elasticsearch::Domain.AccessPolicies`



      :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:attribute:: advancedOptions

      `AWS::Elasticsearch::Domain.AdvancedOptions`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or string => string *(optional)* *(readonly)*


   .. py:attribute:: domainName

      `AWS::Elasticsearch::Domain.DomainName`



      :type: string *(optional)* *(readonly)*


   .. py:attribute:: ebsOptions

      `AWS::Elasticsearch::Domain.EBSOptions`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.EBSOptionsProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: elasticsearchClusterConfig

      `AWS::Elasticsearch::Domain.ElasticsearchClusterConfig`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.ElasticsearchClusterConfigProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: elasticsearchVersion

      `AWS::Elasticsearch::Domain.ElasticsearchVersion`



      :type: string *(optional)* *(readonly)*


   .. py:attribute:: encryptionAtRestOptions

      `AWS::Elasticsearch::Domain.EncryptionAtRestOptions`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.EncryptionAtRestOptionsProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: nodeToNodeEncryptionOptions

      `AWS::Elasticsearch::Domain.NodeToNodeEncryptionOptions`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.NodeToNodeEncryptionOptionsProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: snapshotOptions

      `AWS::Elasticsearch::Domain.SnapshotOptions`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.SnapshotOptionsProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: tags

      `AWS::Elasticsearch::Domain.Tags`



      :type: :py:class:`@aws-cdk/cdk.CfnTag`\ [] *(optional)* *(readonly)*


   .. py:attribute:: vpcOptions

      `AWS::Elasticsearch::Domain.VPCOptions`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-elasticsearch.CfnDomain.VPCOptionsProperty`\  *(optional)* *(readonly)*


